[package]
name = "airnomads"
version = "0.1.0"
edition = "2024"

[lib]
name="airnomads"
path="src/lib.rs"

[[example]]
name="server"
path="examples/server.rs"

[[example]]
name="client"
path="examples/client.rs"

[dependencies]
quiche = { version = "0.24.7", features = ["boringssl-boring-crate"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
rand = "0.10.0"
hex= "0.4"

[dev-dependencies]
tokio-test = "0.4"
